# 2dof_robotarm

./: CMakeLists.txt  README.md  package.xml  robotic_arm.urdf.xacro
config/: arm_config.yaml  hardware_interface.yaml  joint_limits.yaml
launch/: arm_control.launch.py  gazebo_sim.launch.py
meshes/: base.stl
robotic_arm_control/: CMakeLists.txt  package.xml
src/: arm_controller.cpp  gripper_controller.cpp  pca9685_driver.cpp
urdf/: robotic_arm.urdf.xacro  ros2_control.xacro
